maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:6: error: value update is not a member of Boolean
  while (estFaceMur()=false) {
         ^IslandMaze:22: error: value update is not a member of Boolean
  while (estFaceMur()=false) {
         ^