maze.island.IslandMaze.scala.code
override def run() {
  while(porteBiscuit()==false) {
    
    setDirection(Direction.NORTH)
  while (estFaceMur()=false) {
    avance()
  }
    
    keepHandOnSideWall()
    
    
    if (estSurBiscuit()==true) {
      prendBiscuit()
    }
  }
}


def coureurNord() {
  setDirection(Direction.NORTH)
  while (estFaceMur()=false) {
    avance()
  }
}


def keepHandOnSideWall() {
  gauche()
  if (estFaceMur()==true) {
    droite()
    if (estFaceMur()==false) {
    avance()
    }
    else {
      droite()
    }
  }
  else {
    avance()
  }  
}